                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-12-2004 changed: settings, made units in spin controls localizeable
  - 07-12-2004 fixed: my pictures, View by button broken
  - 07-12-2004 fixed: Upscale to GUI res should now be working.
  - 06-12-2004 fixed: Various settings options weren't being displayed correctly.
  - 06-12-2004 fixed: LCD Off mode was missing.
  - 06-12-2004 fixed: Problem with Autoswitch to Big Icons in Video Files view.
  - 06-12-2004 fixed: LaunchXBE/Reboot XBMC didn't work.
  - 06-12-2004 added: option to autoshutdown xbox while playing
  - 06-12-2004 fixed: my pictures, recursive slideshow was played unsorted
  - 06-12-2004 fixed: my videos, items where added unsorted to the playlist
  - 05-12-2004 updated: Romanian language file (Thnx to bompy)
  - 05-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-12-2004 fixed: my music albums, music.jpg is not shown when no thumb is available
  - 02-12-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 02-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 02-12-2004 updated: German language file
  - 02-12-2004 added: New Settings System + various SF patches
                      NOTE: THIS WILL BREAK ALL CURRENT SKINS.  ONLY USE PROJECT MAYHEM IN CVS!!!
  - 01-12-2004 added: extended memory tracking for dll's + added dll tracking for dll's
  - 01-12-2004 fixed: removed old memorytracker since it had lot's of issues (this should fix the problem with AQTBrowser)
  - 30-11-2004 added: [ 917706 ] Extra OSD Info (estimated end time & movie filename)
  - 30-11-2004 fixed: [ 970904 ] Screensaver stays on with WebServer/un-pause