@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 08-12-2004 changed: playlist windows, items are now played shuffled instead of shuffleing playlist items
   - 07-12-2004 changed: settings, made units in spin controls localizeable
   - 07-12-2004 fixed: my pictures, View by button broken
   - 07-12-2004 fixed: Upscale to GUI res should now be working.
